# SPOS-Backend

./: README.md  pyproject.toml
spos_service/: main.py
spos_service/routers/: simulation.py
spos_service/services/: monte_carlo.py  pricing.py  validate.py
spos_service/utils/: supabase_client.py
