[project]
name = "spos-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Zellner",email = "daniel.zellner@edu.fh-joanneum.at"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "supabase (>=2.11.0,<3.0.0)",
    "prophet (>=1.1.6,<2.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]
packages = [{ include = "spos_service" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
